# batyr

./: Cargo.toml  README.md
data/: screenplay.xsd
examples/: goodrich.ps  goodrich.tyr  lederer.ps  lederer.tyr
src/: document.rs  lib.rs  main.rs  text.rs
src/document/: formatter.rs  reader.rs  writer.rs
src/document/reader/: macros.rs
src/text/: parser.rs  tokens.rs
