[package]
name = "batyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.1.6", features = ["derive"] }
encoding = "0.2.33"
lazy_static = "1.4.0"
libmath = "0.1.3"
quick-xml = "0.27.1"
regex = "1"
